Draw.io removed from the used tool chain

--- a/docker/ubuntu/Dockerfile
+++ b/docker/ubuntu/Dockerfile
@@ -1,8 +1,15 @@
-# aligned with github runner version at 23/4/2024
+#
+# Dockerfile for testing project development and tests under Ubuntu distros.
+#
+# This file is part of the 'OpenSCAD Foundation Library' (OFL) project.
+#
+# Copyright © 2021, Giampiero Gabbiani <giampiero@gabbiani.org>
+#
+# SPDX-License-Identifier: GPL-3.0-or-later
+#
 FROM ubuntu:22.04
 LABEL org.opencontainers.image.authors="Giampiero Gabbiani (giampiero@gabbiani.org)"
 ARG ODOX_VERSION=1.2.1
-ARG DRAWIO_VERSION=24.2.5
 ###############################################################################
 # system pre requisites
 RUN apt update \
@@ -20,9 +27,6 @@ RUN apt update \
 # orthodocs must be downloaded
 RUN wget https://github.com/ggabbiani/orthodocs/releases/download/v${ODOX_VERSION}/orthodocs_${ODOX_VERSION}_amd64.deb \
     && apt install -y ./orthodocs_${ODOX_VERSION}_amd64.deb
-# draw.io must be downloaded
-RUN wget https://github.com/jgraph/drawio-desktop/releases/download/v${DRAWIO_VERSION}/drawio-amd64-${DRAWIO_VERSION}.deb \
-    && apt install -y ./drawio-amd64-${DRAWIO_VERSION}.deb
 COPY pyreqs.txt .
 RUN python3 -m venv .venv \
     && . .venv/bin/activate \
