--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -79,7 +79,7 @@ jobs:
         sudo apt update
         # sudo apt upgrade -y
         # TODO: replace deps.sh with a python version based on pydot (installed via pip)
-        sudo apt install -y make python3-venv
+        # sudo apt install -y make python3-venv
         python3 -m venv .venv
         . .venv/bin/activate
 
@@ -87,11 +87,15 @@ jobs:
       run: |
         echo $(pwd)
         echo $(which python3)
+        . .venv/bin/activate
+        echo $(which python3)
         # make -s docker/ubuntu
 
     - name: Tests
       run: |
         echo $(pwd)
+        echo $(which python3)
+        . .venv/bin/activate
         echo $(which python3)
         # make -s docker/ubuntu-tests
 
