--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -77,27 +77,19 @@ jobs:
     - name: Warming-up
       run: |
         sudo apt update
-        # sudo apt upgrade -y
+        sudo apt upgrade -y
         # TODO: replace deps.sh with a python version based on pydot (installed via pip)
-        # sudo apt install -y make python3-venv
         python3 -m venv .venv
-        . .venv/bin/activate
 
-    - name: Documentation
+    - name: Documentation build
       run: |
-        echo $(pwd)
-        echo $(which python3)
         . .venv/bin/activate
-        echo $(which python3)
-        # make -s docker/ubuntu
+        make -s docker/ubuntu
 
-    - name: Tests
+    - name: Tests run
       run: |
-        echo $(pwd)
-        echo $(which python3)
         . .venv/bin/activate
-        echo $(which python3)
-        # make -s docker/ubuntu-tests
+        make -s docker/ubuntu-tests
 
   # Project build and run tests on Fedora based Docker image
   fedora-docker:
