--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -81,13 +81,17 @@ jobs:
         # TODO: replace deps.sh with a python version based on pydot (installed via pip)
         python3 -m venv .venv
 
-    - name: Documentation and tests
+    - name: Documentation
       run: |
         . .venv/bin/activate
         make -s docker/ubuntu
+
+    - name: Tests
+      run: |
+        . .venv/bin/activate
         make -s docker/ubuntu-tests
 
-  # Project build and run tests on Fedora based Docker image
+        # Project build and run tests on Fedora based Docker image
   fedora-docker:
     if: false
     name: Fedora (Docker)
