--- a/docker/Makefile
+++ b/docker/Makefile
@@ -1,10 +1,13 @@
-POD_RUN			= docker run -v $(PRJ_ROOT):/import:Z $(if $(shell tty),-it) --rm
-FEDORA_MAKE		= $(POD_RUN) ofl:fedora
-UBUNTU_MAKE		= $(POD_RUN) ofl:ubuntu
+DOCKER_RUN		= docker run -v $(PRJ_ROOT):/import:Z $(if $(shell tty),-it) --rm
+FEDORA_MAKE		= $(DOCKER_RUN) ofl:fedora
+UBUNTU_MAKE		= $(DOCKER_RUN) ofl:ubuntu
 
-POD_BUILD		= docker build
-FEDORA_BUILD	= $(POD_BUILD) -t ofl:fedora
-UBUNTU_BUILD	= $(POD_BUILD) -t ofl:ubuntu
+DOCKER_BUILD	= docker build
+FEDORA_BUILD	= $(DOCKER_BUILD) -t ofl:fedora
+UBUNTU_BUILD	= $(DOCKER_BUILD) -t ofl:ubuntu
+
+$(info tty: $(shell tty))
+$(info DOCKER_RUN: $(DOCKER_RUN))
 
 clean:
 	$(call aggregate-prologue)
