--- a/docker/Makefile
+++ b/docker/Makefile
@@ -1,4 +1,7 @@
-DOCKER_RUN		= docker run -v $(PRJ_ROOT):/import:Z $(if $(shell tty),-it) --rm
+$(info tty: $(shell tty))
+$(info risultato: $(patsubst not a tty,,$(shell tty)))
+
+DOCKER_RUN		= docker run -v $(PRJ_ROOT):/import:Z $(if $(patsubst not a tty,,$(shell tty)),-it) --rm
 FEDORA_MAKE		= $(DOCKER_RUN) ofl:fedora
 UBUNTU_MAKE		= $(DOCKER_RUN) ofl:ubuntu
 
@@ -6,7 +9,6 @@ DOCKER_BUILD	= docker build
 FEDORA_BUILD	= $(DOCKER_BUILD) -t ofl:fedora
 UBUNTU_BUILD	= $(DOCKER_BUILD) -t ofl:ubuntu
 
-$(info tty: $(shell tty))
 $(info DOCKER_RUN: $(DOCKER_RUN))
 
 clean:
