--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -49,7 +49,7 @@ jobs:
         run: |
           set +e
           git diff --name-only HEAD HEAD~1 | grep -e '^docker'
-          echo "::set-output name=has_changes::$?"
+          echo "has_changes=$?" >> "$GITHUB_ENV"
 
       - name: Docker Hub Login
         if: contains(steps.docker.outputs.has_changes, '1')
