--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -44,7 +44,7 @@ jobs:
           python3 -m venv .venv
           . .venv/bin/activate
 
-      # Check if any docker/* file changed in the last commit.
+      # Check if any docker/fedora/* file changed in the last commit.
       # See also
       # https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions#setting-an-environment-variable
       # and
@@ -53,8 +53,7 @@ jobs:
         id: docker
         run: |
           set +e
-          git diff --name-only HEAD HEAD~1 | grep -e '^docker/'
-          echo "$?" | sed -e 's/0/yes/' -e 's/1/no/' | xargs -I@ echo changed=@ >> "$GITHUB_OUTPUT"
+          (git diff --name-only HEAD HEAD~1| grep -e '^docker/fedora/' >/dev/null && echo yes || echo no) | xargs -I@ echo changed=@ >> "$GITHUB_OUTPUT"
 
       - name: Docker Hub Login
         if: steps.docker.outputs.changed=='yes'
@@ -68,23 +67,16 @@ jobs:
         run: |
           # local image build and project documentation generation
           make -s docker/fedora
-          # local image tests
-          make -s docker/fedora-tests
-          # local image push on DockerHub
+          docker run -v .:/import:Z --rm ${IMAGE_NAME}
+          docker run -v .:/import:Z --rm ${IMAGE_NAME} tests/runs
           docker tag ${IMAGE_NAME} ${DOCKER_IMAGE}
           docker push ${DOCKER_IMAGE}
 
       - name: Docker image pull, test and push
         if: steps.docker.outputs.changed=='no'
         run: |
-          docker pull ${DOCKER_IMAGE}
-          # local image build and project documentation generation
-          make -s docker/fedora
-          # local image tests
-          make -s docker/fedora-tests
-          # local image push on DockerHub
-          docker tag ${IMAGE_NAME} ${DOCKER_IMAGE}
-          docker push ${DOCKER_IMAGE}
+          docker run -v .:/import:Z --rm ${DOCKER_IMAGE}
+          docker run -v .:/import:Z --rm ${DOCKER_IMAGE} tests/runs
 
 
   ubuntu-native:
