fixed regression after the generic cutout algorithm implementation in pcb

--- a/tests/foundation/base_list-test.conf
+++ b/tests/foundation/base_list-test.conf
@@ -3,6 +3,7 @@ TEST_TEMPLATE="template-nogui.scad"
 TEST_PROLOGUE="$PROLOGUE_NOGUI"
 TEST_INCLUDES="
 include <../../lib/OFL/foundation/core.scad>
+include <../../lib/OFL/foundation/unsafe_defs.scad>
 "
 
 TEST_CODE="
@@ -225,4 +226,14 @@ let(
   result  = fl_list_transform(list,M,function(2d) [2d.x,2d.y,0],function(3d) [3d.x,3d.y]),
   expected = [for(item=list) item+t]
 ) assert(result==expected,result);
+
+//**** fl_list_AND() **********************************************************
+
+let(
+  a         = [   +X,+Y,-Y,-Z],
+  b         = [-X      ,-Y,-Z],
+  result    = fl_list_AND(a,b),
+  expected  = [-Y,-Z]
+) assert(result==expected,result);
+
 "
