DIN rails updated

--- a/tests/artifacts/din_rails-test.conf
+++ b/tests/artifacts/din_rails-test.conf
@@ -57,9 +57,9 @@ TAB_Verbs="
 TAB_TEST="
 /* [DIN rails] */
 
-SHOW    = "ALL";  // [ALL, TS15, TS35, TS35D]
+SHOW    = \"ALL\";  // [ALL, TS15, TS35, TS35D]
 LENGTH  = 100;    // [0:100]
-PUNCHED = false;
+PUNCHED = true;
 "
 
 # TEST_PROLOGUE="
