DIN rail fix and refactoring

--- a/tests/artifacts/din_rails-test.conf
+++ b/tests/artifacts/din_rails-test.conf
@@ -63,14 +63,14 @@ TAB_TEST="
 
 SHOW    = \"ALL\";  // [ALL, TS15, TS35, TS35D]
 LENGTH  = 50;    // [0:100]
-PUNCHED = true;
+PUNCH   = \"none\"; // [none,4p2,6p2]
 // used during FL_CUTOUT and FL_FOOTPRINT
 TOLERANCE   = 0;  // [0:0.1:5]
 // thickness for FL_CUTOUT
 CO_T  = 2.5;          // [0:0.5:5]
 // translation applied to cutout
 CO_DRIFT = 0; // [-100:0.5:100]
-CO_DIRECTION  = [\"+X\"];
+CO_DIRECTION  = [\"±Z\"];
 "
 
 # TEST_PROLOGUE="
@@ -82,6 +82,7 @@ CO_DIRECTION  = [\"+X\"];
 # "
 
 TEST_CODE="
+punch         = PUNCH==\"4p2\" ? FL_DIN_PUNCH_4p2 : PUNCH==\"6p2\" ?FL_DIN_PUNCH_6p2 : undef;
 thick         = \$FL_CUTOUT!=\"OFF\" ? CO_T       : undef;
 tolerance     = \$FL_CUTOUT!=\"OFF\" || \$FL_FOOTPRINT!=\"OFF\" ? TOLERANCE  : undef;
 drift         = \$FL_CUTOUT!=\"OFF\" ? CO_DRIFT   : undef;
@@ -90,15 +91,15 @@ co_direction  = fl_3d_AxisList(CO_DIRECTION);
 
 verbs = fl_verbList([FL_ADD,FL_AXES,FL_BBOX,FL_CUTOUT,FL_FOOTPRINT,FL_LAYOUT,FL_MOUNT]);
 
-single = fl_switch(SHOW,fl_list_pack(fl_dict_names(FL_DIN_RP_INVENTORY),FL_DIN_INVENTORY));
+single = fl_switch(SHOW,fl_list_pack(fl_dict_names(FL_DIN_TS_INVENTORY),FL_DIN_RAIL_INVENTORY));
 if (single) {
   fl_DIN_rail(
-    verbs,single(LENGTH,PUNCHED),
+    verbs,single(LENGTH,punch),
     cut_direction=co_direction,cut_thick=p_thick,tolerance=tolerance,cut_drift=drift,
     octant=octant,direction=direction,debug=debug
   );
 } else {
-  all = [for(constructor=FL_DIN_INVENTORY) constructor(LENGTH,PUNCHED)];
+  all = [for(constructor=FL_DIN_RAIL_INVENTORY) constructor(LENGTH,punch)];
   fl_layout(axis=+X,gap=3,types=all,\$FL_LAYOUT=\"ON\")
     fl_DIN_rail(
       verbs,all[\$i],
