fixed test warning

--- a/tests/foundation/dimensions-test.conf
+++ b/tests/foundation/dimensions-test.conf
@@ -1,8 +1,9 @@
-# TEST_DESCRIPTION=""
+TEST_DESCRIPTION="Dimension lines test"
 
 TEST_TEMPLATE="template-3d.scad"
 
-# ARG_CAMERA="0,0,0,0,0,0,7"
+ARG_CAMERA="0,0,0,0,0,0,7"
+ARG_PROJECTION="ortho"
 
 TEST_INCLUDES="
 include <../../lib/OFL/foundation/dimensions.scad>
