--- a/tests/foundation/dimensions-test.conf
+++ b/tests/foundation/dimensions-test.conf
@@ -32,39 +32,25 @@ TAB_Verbs="
 \$FL_BBOX      = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
 "
 
-# TAB_Placement="
-# /* [3D Placement] */
+TAB_Placement=""
 
-# X_PLACE = \"undef\";  // [undef,-1,0,+1]
-# Y_PLACE = \"undef\";  // [undef,-1,0,+1]
-# Z_PLACE = \"undef\";  // [undef,-1,0,+1]
-# "
-
-# TAB_Direction="
-# /* [Direction] */
-# DIR_NATIVE  = true;
-# // ARBITRARY direction vector
-# DIR_Z       = [0,0,1];  // [-1:0.1:+1]
-# // rotation around
-# DIR_R       = 0;        // [-360:360]
-# "
+TAB_Direction=""
 
 TAB_Dimensions="
 /* [Dimension Lines] */
-\$DIM_MODE      = \"full\"; // [full,label,value,silent]
-\$DIM_GAP       = 1;  // [1:.1:10]
-VIEW_TYPE      = \"other\";  // [other,right,top,bottom,left]
+VIEW_TYPE     = \"other\";    // [other,right,top,bottom,left]
+DIM_MODE      = \"full\";     // [full,label,value,silent]
+DIM_GAP       = 1;          // [1:.1:10]
+DIM_W         = 0.1;        // [0.1:0.1:1]
 "
 
 # TAB_TEST=""
 
-# TEST_PROLOGUE="
-# direction = DIR_NATIVE    ? undef : [DIR_Z,DIR_R];
-# octant    = fl_parm_Octant(X_PLACE,Y_PLACE,Z_PLACE);
-# debug     = fl_parm_Debug(SHOW_LABELS,SHOW_SYMBOLS);
+TEST_PROLOGUE="
+debug     = fl_parm_Debug(SHOW_LABELS,SHOW_SYMBOLS,dimensions=SHOW_DIMENSIONS);
 
-# fl_status();
-# "
+fl_status();
+"
 
 TEST_CODE="
 verbs   = fl_verbList([FL_ADD,FL_BBOX]);
@@ -72,17 +58,45 @@ verbs   = fl_verbList([FL_ADD,FL_BBOX]);
 d       = 4;
 h       = 10;
 cyl     = fl_cylinder_defaults(h=h,d=d);
-line_w  = 0.1;
 
-dim_radius    = fl_Dimension(value=d/2,  label=\"radius\",   object=cyl, spread=-Y, line_width=line_w);
-dim_diameter  = fl_Dimension(value=d,    label=\"diameter\", object=cyl, spread=-Y, line_width=line_w);
-dim_height    = fl_Dimension(value=h,    label=\"height\",   object=cyl, spread=+X, line_width=line_w, view=\"right\");
+dim_r = fl_Dimension(value=d/2,  label=\"r\");
+dim_d = fl_Dimension(value=d,    label=\"d\");
+dim_h = fl_Dimension(value=h,    label=\"h\");
 
 \$vpr = fl_view(VIEW_TYPE);
 
-fl_dimension(verbs,geometry=dim_radius,align=+X)
-  fl_dimension(verbs,geometry=dim_diameter);
-fl_dimension(verbs,geometry=dim_height,align=+Y,direction=[+X,90]);
+fl_cylinder(h=h,d=d,\$fn=100,\$FL_ADD=\"ON\");
 
-fl_cylinder(h=h,d=d,\$fn=100);
+if (fl_parm_dimensions(debug)) {
+  fl_dimension(verbs,dim_r,
+    view=\"top\",
+    gap=DIM_GAP,
+    align=\"positive\",
+    object=cyl,
+    distr=\"h+\",
+    line_width=DIM_W,
+    mode=DIM_MODE
+  ) fl_dimension(verbs,geometry=dim_d,align=\"centered\")
+      fl_dimension(verbs,geometry=dim_d,align=-1.5);
+
+  fl_dimension(verbs,dim_h,
+    view=\"right\",
+    gap=DIM_GAP,
+    align=\"positive\",
+    object=cyl,
+    distr=\"h+\",
+    line_width=DIM_W,
+    mode=DIM_MODE
+  );
+
+  fl_dimension(verbs,dim_r,
+    view=\"right\",
+    gap=DIM_GAP,
+    align=\"positive\",
+    object=cyl,
+    distr=\"v+\",
+    line_width=DIM_W,
+    mode=DIM_MODE
+  );
+}
 "
