--- a/tests/defaults.conf
+++ b/tests/defaults.conf
@@ -9,7 +9,7 @@ Z_PLACE = \"undef\";  // [undef,-1,0,+1]
 PROLOGUE_3D="
 direction = DIR_NATIVE    ? undef : [DIR_Z,DIR_R];
 octant    = fl_parm_Octant(X_PLACE,Y_PLACE,Z_PLACE);
-debug     = fl_parm_Debug(SHOW_LABELS,SHOW_SYMBOLS);
+debug     = fl_parm_Debug(SHOW_LABELS,SHOW_SYMBOLS,dimensions=SHOW_DIMENSIONS);
 
 fl_status();
 "
@@ -22,7 +22,7 @@ Y_PLACE = \"undef\";  // [undef,-1,0,+1]
 "
 PROLOGUE_2D="
 quadrant    = fl_parm_Quadrant(X_PLACE,Y_PLACE);
-debug       = fl_parm_Debug(SHOW_LABELS,SHOW_SYMBOLS);
+debug       = fl_parm_Debug(SHOW_LABELS,SHOW_SYMBOLS,dimensions=SHOW_DIMENSIONS);
 
 fl_status();
 "
@@ -46,6 +46,7 @@ TAB_PARAMETERS="
 \$FL_TRACES     = -2;     // [-2:10]
 SHOW_LABELS     = false;
 SHOW_SYMBOLS    = false;
+SHOW_DIMENSIONS = false;
 "
 TAB_Placement="$Placement_3D"
 
