--- a/tests/skeleton-3d.conf
+++ b/tests/skeleton-3d.conf
@@ -18,6 +18,7 @@ TEST_TEMPLATE="template-3d.scad"
 # \$FL_TRACES     = -2;     // [-2:10]
 # SHOW_LABELS     = false;
 # SHOW_SYMBOLS    = false;
+# SHOW_DIMENSIONS = false;
 # "
 
 # TAB_Verbs=""
@@ -44,7 +45,7 @@ TEST_TEMPLATE="template-3d.scad"
 # TEST_PROLOGUE="
 # direction = DIR_NATIVE    ? undef : [DIR_Z,DIR_R];
 # octant    = fl_parm_Octant(X_PLACE,Y_PLACE,Z_PLACE);
-# debug     = fl_parm_Debug(SHOW_LABELS,SHOW_SYMBOLS);
+# debug     = fl_parm_Debug(SHOW_LABELS,SHOW_SYMBOLS,dimensions=SHOW_DIMENSIONS);
 
 # fl_status();
 # "
