added dimension lines

--- a/tests/artifacts/din_rails-test.conf
+++ b/tests/artifacts/din_rails-test.conf
@@ -58,6 +58,12 @@ TAB_Verbs="
 # DIR_R       = 0;        // [-360:360]
 # "
 
+TAB_Dimensions="
+/* [Dimension Lines] */
+VIEW_TYPE     = \"other\";    // [other,right,top,bottom,left,front,back]
+DIM_MODE      = \"full\";     // [full,label,value,silent]
+"
+
 TAB_TEST="
 /* [DIN rails] */
 
@@ -82,6 +88,9 @@ CO_DIRECTION  = [\"±Z\"];
 # "
 
 TEST_CODE="
+
+\$vpr          = fl_view(VIEW_TYPE);
+\$dim_mode     = DIM_MODE;
 thick         = \$FL_CUTOUT!=\"OFF\" ? CO_T       : undef;
 tolerance     = \$FL_CUTOUT!=\"OFF\" || \$FL_FOOTPRINT!=\"OFF\" ? TOLERANCE  : undef;
 drift         = \$FL_CUTOUT!=\"OFF\" ? CO_DRIFT   : undef;
