--- a/orthodocs/artifacts/800x600/Makefile
+++ b/orthodocs/artifacts/800x600/Makefile
@@ -1,12 +1,11 @@
 # include *.deps
 
-comma		:= ,
 SIZE		:= $(notdir $(CURDIR))
 CURR_BASE	:= $(notdir $(CURDIR:/$(SIZE)=))
 PICTURES	:= fig_joints_front_view.png fig_joints_right_view.png fig_joints_top_view.png
-front_view	:= 0$(comma)1.51$(comma)-1.91$(comma)90$(comma)0$(comma)0$(comma)31.23
-right_view	:= 0$(comma)1.51$(comma)-1.91$(comma)90$(comma)0$(comma)90$(comma)31.23
-top_view	:= 0$(comma)1.51$(comma)-1.91$(comma)0$(comma)0$(comma)0$(comma)31.23
+front_view	:= 0$(COMMA)1.51$(COMMA)-1.91$(COMMA)90$(COMMA)0$(COMMA)0$(COMMA)31.23
+right_view	:= 0$(COMMA)1.51$(COMMA)-1.91$(COMMA)90$(COMMA)0$(COMMA)90$(COMMA)31.23
+top_view	:= 0$(COMMA)1.51$(COMMA)-1.91$(COMMA)0$(COMMA)0$(COMMA)0$(COMMA)31.23
 
 include $(FUNCTIONS)
 
